--- a/nodesetup/package.json
+++ b/nodesetup/package.json
@@ -1,18 +1,40 @@
 {
-  "name": "nodesetup",
+  "name": "library-management-system",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A comprehensive library management system API built with Node.js, Express, and MongoDB",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node scripts/seedData.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "library",
+    "management",
+    "system",
+    "api",
+    "nodejs",
+    "express",
+    "mongodb",
+    "jwt",
+    "authentication"
+  ],
+  "author": "Library Management Team",
+  "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
